--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Mary Rose Cook <maryrosecook@maryrosecook.com>",
   "version": "0.1.0",
   "scripts": {
-    "test":"node_modules/jasmine-node/bin/jasmine-node spec/"
+    "test":"node_modules/jasmine-node/bin/jasmine-node spec/",
+    "minify": "node scripts/minifier.js"
   },
   "dependencies": {
     "underscore": "1.3.3",
