Update project package name to codewithisla

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "programwithisla",
+  "name": "codewithisla",
   "description": "Write Isla code to interact with demos.",
   "author": "Mary Rose Cook <maryrosecook@maryrosecook.com>",
   "version": "0.1.0",
