--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test":"node_modules/jasmine-node/bin/jasmine-node spec/",
     "minify": "node scripts/minifier.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maryrosecook/codewithisla.git"
+  },
   "dependencies": {
     "underscore": "1.3.3",
     "multimethod": "0.1.0",
